# multy_driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  gen_android_bluetooth_headers.sh  install_manifest.txt  test.sh
device_monitor/: local.properties
device_monitor/app/: build.gradle
device_monitor/app/src/main/: AndroidManifest.xml
device_monitor/app/src/main/cpp/: CMakeLists.txt
device_monitor/app/src/main/java/bluetoothhelper/: BluethoothHelper.java
device_monitor/app/src/main/java/com/devicemonitor/: MainActivity.java
device_monitor/app/src/main/res/layout/: activity_main.xml
docs/: web_integration_components.uxf
include/: adapter.h  android.h  bluetooth_adapter.h  device.h  device_driver.h  device_manager.h  internal_types.h  java_helper.h  qt_bluetooth_server.h
src/: bluetooth_adapter.cpp  bluetooth_adapter_native_android.cpp  device.cpp  device_driver.cpp  device_manager.cpp  java_helper.cpp  qt_bluetooth_server.cpp
src/bluetooth_helper/: bluetooth_helper.java
test/: CMakeLists.txt  test  test_app.cpp
